fix clipping issue on top part of image on the first row.

--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -6,6 +6,11 @@
 .card-img-top {
     /* box-shadow: 0 3px 6px rgba(0,0,0,.16), 0 3px 6px rgba(0,0,0,.23); */
     cursor: pointer;
+    /* width: 95%; */
+}
+
+.card {
+    background-color: green;
 }
 
 .card-img-top, .card {
